--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -371,20 +371,20 @@ endif()
 
 if(NOT UA_COMPILE_AS_CXX AND (CMAKE_COMPILER_IS_GNUCC OR "x${CMAKE_C_COMPILER_ID}" STREQUAL "xClang"))
     # Compiler
-    add_definitions(-std=c99 -pipe
-                    -Wall -Wextra -Werror -Wpedantic
-                    -Wno-static-in-inline # clang doesn't like the use of static inline methods inside static inline methods
-                    -Wno-overlength-strings # may happen in the nodeset compiler when complex values are directly encoded
-                    -Wno-unused-parameter # some methods may require unused arguments to cast to a method pointer
-                    -Wmissing-prototypes -Wstrict-prototypes -Wredundant-decls
-                    -Wformat -Wformat-security -Wformat-nonliteral
-                    -Wuninitialized -Winit-self
-                    -Wcast-qual
-                    -Wstrict-overflow
-                    -Wnested-externs
-                    -Wmultichar
-                    -Wundef
-                    -Wc++-compat)
+#    add_definitions(-std=c99 -pipe
+#                    -Wall -Wextra -Werror -Wpedantic
+#                    -Wno-static-in-inline # clang doesn't like the use of static inline methods inside static inline methods
+#                    -Wno-overlength-strings # may happen in the nodeset compiler when complex values are directly encoded
+#                    -Wno-unused-parameter # some methods may require unused arguments to cast to a method pointer
+#                    -Wmissing-prototypes -Wstrict-prototypes -Wredundant-decls
+#                    -Wformat -Wformat-security -Wformat-nonliteral
+#                    -Wuninitialized -Winit-self
+#                    -Wcast-qual
+#                    -Wstrict-overflow
+#                    -Wnested-externs
+#                    -Wmultichar
+#                    -Wundef
+#                    -Wc++-compat)
 
     if(UA_ENABLE_AMALGAMATION)
         add_definitions(-Wno-unused-function)
